--- a/f3.ipynb
+++ b/f3.ipynb
@@ -1663,11 +1663,11 @@
     "\n",
     "print(\"\\n--- Важность признаков ---\")\n",
     "print(\"\\nВажность признаков (Gini):\")\n",
-    "for i, (feature, importance) in enumerate(zip(feature_names, tree_gini.feat_importances_)):\n",
+    "for i, (feature, importance) in enumerate(zip(feature_names, tree_gini.feature_importances_)):\n",
     "    print(f\"  {feature}: {importance:.4f}\")\n",
     "\n",
     "print(\"\\nВажность признаков (Entropy):\")\n",
-    "for i, (feature, importance) in enumerate(zip(feature_names, tree_entropy.feat_importances_)):\n",
+    "for i, (feature, importance) in enumerate(zip(feature_names, tree_entropy.feature_importances_)):\n",
     "    print(f\"  {feature}: {importance:.4f}\")\n",
     "\n",
     "print(\"\\n--- Сравнение алгоритмов разделения ---\")\n",
@@ -3541,7 +3541,7 @@
     "          ax=axes[0])\n",
     "axes[0].set_title(f'Структура дерева регрессии (первые 3 уровня)\\nГлубина: {regr_tree.get_depth()}, Листьев: {regr_tree.get_n_leaves()}')\n",
     "\n",
-    "feat_importance = regr_tree.feat_importances_\n",
+    "feat_importance = regr_tree.feature_importances_\n",
     "sorted_idx = np.argsort(feat_importance)[::-1]\n",
     "\n",
     "axes[1].bar(range(len(feat_importance)), feat_importance[sorted_idx])\n",
@@ -4629,7 +4629,7 @@
     "\n",
     "# 5. Важность признаков\n",
     "print(\"\\n5. Важность признаков в Random Forest:\")\n",
-    "importances = forest_clf.feat_importances_\n",
+    "importances = forest_clf.feature_importances_\n",
     "indices = np.argsort(importances)[::-1]\n",
     "\n",
     "print(\"   Ранжирование признаков по важности:\")\n",
@@ -4804,7 +4804,7 @@
     ")\n",
     "forest_clf_final.fit(X_train, y_train)\n",
     "\n",
-    "importances = forest_clf_final.feat_importances_\n",
+    "importances = forest_clf_final.feature_importances_\n",
     "indices = np.argsort(importances)[::-1]\n",
     "\n",
     "print(\"\\nFeature Importances:\")\n",
@@ -5020,7 +5020,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
-    "importances = forest_clf_regressor.feat_importances_\n",
+    "importances = forest_clf_regressor.feature_importances_\n",
     "indices = np.argsort(importances)[::-1]\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
